NEON-1323 Keep translation on filter change and query. Move translation options to its own directive. Retrieve all supported languages in rest call. Add comments.

--- a/app/index.html
+++ b/app/index.html
@@ -234,5 +234,6 @@
         <script src="js/directives/visualizationWidget.js"></script>
         <script src="js/directives/sunburst.js"></script>
         <script src="js/directives/arrayTextForm.js"></script>
+        <script src="js/directives/translationOptions.js"></script>
     </body>
 </html>
