--- a/app/index.html
+++ b/app/index.html
@@ -152,6 +152,9 @@
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
         -->
+        <!--
+        <script src="js/vendor/angular.js"></script>
+        -->
         <script src="lib/angular/js/angular.min.js"></script>
         <script src="lib/angular-gridster/js/angular-gridster.min.js"></script>
         <script src="lib/moment/js/moment.min.js"></script>
