Added a routeProvider and a locationProvider to our angular module so it can handle GET parameters in its URL without a hash character.

--- a/app/index.html
+++ b/app/index.html
@@ -161,6 +161,7 @@
         <script src="lib/angular-moment/js/angular-moment.min.js"></script>
         <script src="lib/angular-gantt/js/angular-gantt.min.js"></script>
         <script src="lib/angular-gantt/js/angular-gantt-plugins.min.js"></script>
+        <script src="lib/angular-route/js/angular-route.min.js"></script>
         <script src="lib/angular-ui-tree/js/angular-ui-tree.min.js"></script>
         <script src="lib/angular-bootstrap-datetimepicker/js/datetimepicker.js"></script>
         <script src="lib/javascript-detect-element-resize/js/jquery.resize.js"></script>
