NEON-1771 Display error bar above filter tray

--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
                             <li ng-show="showImport"><a href="#" data-toggle="modal" data-target="#importModal" ng-show="canImport">
                                 Import File
                             </a>
-                            <a href="#" class=unselectable" ng-show="!canImport">
+                            <a href="#" class="unselectable" ng-show="!canImport">
                                 This browser does not support data import
                             </a></li>
                             <li ng-show="showImport"><a href="#" data-toggle="modal" data-target="#removeDatasetModal" ng-show="canImport">
