--- a/app/index.html
+++ b/app/index.html
@@ -236,6 +236,7 @@
         <script src="js/directives/importFile.js"></script>
         <script src="js/directives/linechart.js"></script>
         <script src="js/directives/linksPopup.js"></script>
+        <script src="js/directives/linksPopupButton.js"></script>
         <script src="js/directives/map.js"></script>
         <script src="js/directives/newsfeed.js"></script>
         <script src="js/directives/optionsMenu.js"></script>
