NEON-1791 Admins can now use a YAML configuration file (app/config/config.yaml) for configuring the Neon dashboard instead of a JSON file.  If both are present, the config.yaml prevails.  Added a sample.config.yaml file and updated the sample.config.json file.

--- a/app/index.html
+++ b/app/index.html
@@ -151,9 +151,9 @@
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
         -->
         <!--
-        <script src="js/vendor/angular.js"></script>
-        -->
         <script src="lib/angular/js/angular.min.js"></script>
+        -->
+        <script src="js/vendor/angular.js"></script>
         <script src="lib/angular-gridster/js/angular-gridster.min.js"></script>
         <script src="lib/moment/js/moment.min.js"></script>
         <script src="lib/angular-moment/js/angular-moment.min.js"></script>
@@ -183,6 +183,7 @@
         <script src="js/vendor/slick-grid/js/slick.rowselectionmodel.js"></script>
         <script src="lib/mergesort/js/merge-sort.js"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+        <script src="lib/js-yaml/js/js-yaml.min.js"></script>
         <script src="lib/mustache/js/mustache.min.js"></script>
         <script src="lib/ngDraggable/js/ngDraggable.js"></script>
         <script src="lib/remarkable-bootstrap-notify/js/bootstrap-notify.min.js"></script>
