NEON-1690 Cleaning up styling in style.less and timeline

--- a/app/index.html
+++ b/app/index.html
@@ -126,7 +126,7 @@
             <div gridster="gridsterOpts" id="gridster-div">
                 <ul>
                     <li gridster-item="visualization" ng-repeat="visualization in visualizations track by visualization.id">
-                        <div class="well" visualization-widget
+                        <div class="visualization-well" visualization-widget
                             gridster-configs="visualizations"
                             gridster-config-index="$index"
                             ng-class="(isInMobileMode())? 'visualization-widget-mobile' : 'visualization-widget'"></div>
