Moving the functionality previously in the popups.links namespace to the new Links Popup Service as suggested during the code review.

--- a/app/index.html
+++ b/app/index.html
@@ -213,8 +213,9 @@
         <script src="js/filterService.js"></script>
         <script src="js/exportService.js"></script>
         <script src="js/importService.js"></script>
-        <script src="js/translationService.js"></script>
+        <script src="js/linksPopupService.js"></script>
         <script src="js/parameterService.js"></script>
+        <script src="js/translationService.js"></script>
         <script src="js/neonDemoController.js"></script>
 
         <script src="js/charts/circularHeatChart.js"></script>
