--- a/app/index.html
+++ b/app/index.html
@@ -71,39 +71,62 @@
                     </div>
 
                     <!-- Options Button -->
-                    <div class="dropdown pull-right" ng-show="!(hideAdvancedOptions) && (showImport || showExport)">
-                        <a class="dropdown-toggle navbar-text options" data-toggle="dropdown" href="#" role="button">
-                            <!--img class="brand-image" src="img/Options_64x64.png" height="34"></img-->
-                            <span class="glyphicon glyphicon-cog options-gear"></span>
+                    <div class="collapsed pull-right" ng-show="!(hideAdvancedOptions) && (showImport || showExport)">
+                        <a class="collapse-toggle navbar-text options" data-toggle="collapse" data-target="#options-dropdown" role="button">
+                            <i class="glyphicon glyphicon-cog options-gear"></i>
                         </a>
-                        <ul class="dropdown-menu">
-                            <li ng-show="showExport"><a href="#" class="unselectable">Export Format:</a></li>
-                            <li file-formats gridster-configs="visualizations" ng-show="showExport"></li>
-                            <li export-widgets gridster-configs="visualizations" ng-show="showExport"></li>
-                            <li class="divider" ng-show="showExport && showImport"></li>
-                            <li ng-show="showImport">
-                                <a href="#" data-toggle="modal" data-target="#importModal" ng-show="canImport">
-                                    Import File
-                                </a>
-                                <a href="#" class="unselectable" ng-show="!canImport">
-                                    This browser does not support data import
-                                </a>
-                            </li>
-                            <li ng-show="showImport"><a href="#" data-toggle="modal" data-target="#removeDatasetModal" ng-show="canImport">
-                                Drop Dataset
-                            </a></li>
-                            <div class="row">
-                                <div class='col-lg-12'>
-                                    <button class="btn btn-default" ng-click="updateTheme('light-green')">Light Green</button>
-                                    <button class="btn btn-default" ng-click="updateTheme('dark-green')">Dark Green</button>
-                                    <button class="btn btn-default" ng-click="updateTheme('dark-purple')">Dark Purple</button>
+                        <div id="options-dropdown" class="popover bottom options-dropdown pull-right">
+                            <div class="arrow"></div>
+                            <div class="popover-content">
+                                <div class="container options-container">
+                                    <div ng-show="showExport">
+                                        <div class="row">
+                                            <div class="col-lg-12 format">Export Format:</div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-12 export-options text-center">
+                                                <div file-formats gridster-configs="visualizations" ng-show="showExport"></div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-12 export-button text-center">
+                                                <div export-widgets gridster-configs="visualizations" ng-show="showExport"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="divider" ng-show="showExport && showImport"></div>
+                                    <div ng-show="showImport">
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <a href="#" data-toggle="modal" data-target="#importModal" ng-show="canImport">
+                                                    Import File
+                                                </a>
+                                                <a href="#" class="unselectable" ng-show="!canImport">
+                                                    This browser does not support data import
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <a href="#" data-toggle="modal" data-target="#removeDatasetModal" ng-show="canImport">
+                                                    Drop Dataset
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="divider" ng-show="showExport || showImport"></div>
+                                    <div class="row">
+                                        <div class="col-lg-12 theme-label">Theme:</div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <select class="form-control" ng-options="item as item for item in theme.themes" ng-model="theme.selected" ng-change="updateTheme()"></select>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </ul>
-
-
+                        </div>
                     </div>
-
                     <div powered-by-neon class="pull-right"></div>
 
 
