--- a/app/index.html
+++ b/app/index.html
@@ -8,18 +8,8 @@
 
         <link type="image/png" rel="shortcut icon" href="img/Neon_16x16.png">
 
-        <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery-ui.min.css">
-        <link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery.ui.theme.css">
-        <link rel="stylesheet" type="text/css" href="lib/openlayers/theme/default/style.css">
-        <link rel="stylesheet" type="text/css" href="js/vendor/slick-grid/css/slick.grid.css">
-        <link rel="stylesheet" type="text/css" href="lib/angular-gridster/css/angular-gridster.min.css">
-        <link rel="stylesheet" type="text/css" href="lib/angular-gantt/css/angular-gantt.min.css">
-        <link rel="stylesheet" type="text/css" href="lib/angular-gantt/css/angular-gantt-plugins.min.css">
-        <link rel="stylesheet" type="text/css" href="lib/angular-ui-tree/css/angular-ui-tree.min.css">
-        <link rel="stylesheet" type="text/css" href="lib/angular-bootstrap-datetimepicker/css/datetimepicker.css">
-
-        <link rel="stylesheet" type="text/css" href="css/app.css">
+        <link rel="stylesheet" type="text/css" href="build/css/neon-dashboard.css">
+        <link rel="stylesheet" type="text/css" href="build/css/neon-dashboard-sprites.css">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,7 +51,9 @@
                     <!-- Help Button -->
                     <div class="dropdown pull-right" ng-show="(help.guide || help.video)">
                         <a class="dropdown-toggle navbar-text" data-toggle="dropdown" href="#" role="button">
-                            <img class="brand-image" src="img/Help_64x64.png" height="34"></img>Help<span class="caret"></span>
+                            <span class="icon-Help_34x34 neon-sprite"></span>
+                            <span>Help</span>
+                            <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li ng-show="(help.guide)"><a href="{{help.guide}}" target="guide">
@@ -76,7 +68,9 @@
                     <!-- Options Button -->
                     <div class="dropdown pull-right" ng-show="!(hideAdvancedOptions) && (showImport || showExport)">
                         <a class="dropdown-toggle navbar-text" data-toggle="dropdown" href="#" role="button">
-                            <img class="brand-image" src="img/Options_64x64.png" height="34"></img>Options<span class="caret"></span>
+                            <span class="icon-Options_34x34 neon-sprite"></span>
+                            <span>Options</span>
+                            <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li ng-show="showExport"><a href="#" class="unselectable">Export Format:</a></li>
@@ -134,25 +128,22 @@
 
         <links-popup></links-popup>
 
-        <!-- Include the xdata logging package. -->
-        <script src="lib/user-ale/js/userale.js"></script>
-        <script src="lib/user-ale/js/userale-worker.js"></script>
-
         <!-- Including neon before angular here as neon has lodash and jquery wrapped into it.  If this is
              loaded first, angular should pick up the included jQuery. -->
         <script src="/neon/js/neon.js"></script>
 
+        <script src="lib/openlayers/OpenLayers.js"></script>
+
+        <script src="build/js/neon-dashboard.js"></script>
+
+        <!-- For Development
+        <script src="lib/user-ale/js/userale.js"></script>
+        <script src="lib/user-ale/js/userale-worker.js"></script>
+
         <script src="lib/jquery/js/jquery.min.js"></script>
 
-        <!-- Include the opencpu library. OpenCPU needs to be included after JQuery and before the app config. -->
         <script src="lib/opencpu/js/opencpu-0.5.js"></script>
 
-        <!-- In production use:
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-        -->
-        <!--
-        <script src="js/vendor/angular.js"></script>
-        -->
         <script src="lib/angular/js/angular.min.js"></script>
         <script src="lib/angular-gridster/js/angular-gridster.min.js"></script>
         <script src="lib/moment/js/moment.min.js"></script>
@@ -164,7 +155,6 @@
         <script src="lib/angular-bootstrap-datetimepicker/js/datetimepicker.js"></script>
         <script src="lib/javascript-detect-element-resize/js/jquery.resize.js"></script>
 
-        <!-- Include third party libs -->
         <script src="lib/d3/js/d3.min.js"></script>
 
         <script src="lib/openlayers/OpenLayers.js"></script>
@@ -174,7 +164,6 @@
         <script src="lib/threedubmedia.jquery.event/js/jquery.event.drag.js"></script>
         <script src="lib/threedubmedia.jquery.event/js/jquery.event.drop.js"></script>
         <script src="lib/jquery.linky/js/jquery.linky.min.js"></script>
-        <!-- <script src="lib/jquery/jquery-ui-1.8.16.custom.min.js"></script> -->
         <script src="lib/jquery-ui/js/jquery-ui.min.js"></script>
         <script src="js/vendor/slick-grid/js/slick.core.js"></script>
         <script src="js/vendor/slick-grid/js/slick.grid.js"></script>
@@ -189,7 +178,6 @@
         <script src="lib/remarkable-bootstrap-notify/js/bootstrap-notify.min.js"></script>
         <script src="lib/rainbowvis.js/js/rainbowvis.js"></script>
 
-        <!-- Include required non-angular support modules -->
         <script src="js/neon-extensions/filtertable.js"></script>
         <script src="js/namespaces.js"></script>
         <script src="js/charts/barchart.js"></script>
@@ -205,7 +193,6 @@
         <script src="js/charts/sunburst.js"></script>
         <script src="js/mediators/directedGraphMediator.js"></script>
 
-        <!-- Include our custom Angular components here for now. -->
         <script src="js/app.js"></script>
         <script src="js/connectionService.js"></script>
         <script src="js/datasetService.js"></script>
@@ -255,5 +242,6 @@
         <script src="js/directives/sunburst.js"></script>
         <script src="js/directives/arrayTextForm.js"></script>
         <script src="js/directives/translationOptions.js"></script>
+        -->
     </body>
 </html>
