NEON-1828 Grunt now minifies the neon dashboard javascript code.

--- a/app/index.html
+++ b/app/index.html
@@ -137,7 +137,8 @@
 
         <script src="lib/openlayers/OpenLayers.js"></script>
 
-        <script src="build/js/neon-dashboard.js"></script>
+        <script src="build/js/neon-dashboard-lib.js"></script>
+        <script src="build/js/neon-dashboard.min.js"></script>
 
         <!-- For Development
         <script src="lib/user-ale/js/userale.js"></script>
