--- a/app/index.html
+++ b/app/index.html
@@ -148,7 +148,7 @@
 
         <script src="lib/opencpu/js/opencpu-0.5.js"></script>
 
-        <script src="lib/angular/js/angular.min.js"></script>
+        <script src="js/vendor/angular.js"></script>
         <script src="lib/angular-gridster/js/angular-gridster.min.js"></script>
         <script src="lib/moment/js/moment.min.js"></script>
         <script src="lib/angular-moment/js/angular-moment.min.js"></script>
