--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,11 @@
         <link rel="stylesheet" type="text/css" href="lib/angular-ui-tree/css/angular-ui-tree.min.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-bootstrap-datetimepicker/css/datetimepicker.css">
 
+        <link rel="stylesheet" type="text/css" href="lib/ag-grid/css/ag-grid.min.css">
+        <link rel="stylesheet" type="text/css" href="lib/ag-grid/css/theme-fresh.min.css">
+        <link rel="stylesheet" type="text/css" href="lib/ag-grid/css/theme-dark.min.css">
+
+
         <link rel="stylesheet" type="text/css" href="css/app.css">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -172,6 +177,7 @@
         <script src="lib/jquery.linky/js/jquery.linky.min.js"></script>
         <!-- <script src="lib/jquery/jquery-ui-1.8.16.custom.min.js"></script> -->
         <script src="lib/jquery-ui/js/jquery-ui.min.js"></script>
+        <script src="lib/ag-grid/js/ag-grid.min.js"></script>
         <script src="js/vendor/slick-grid/js/slick.core.js"></script>
         <script src="js/vendor/slick-grid/js/slick.grid.js"></script>
         <script src="js/vendor/slick-grid/js/slick.dataview.js"></script>
