--- a/app/index.html
+++ b/app/index.html
@@ -164,6 +164,7 @@
         <script src="lib/angular-ui-tree/js/angular-ui-tree.min.js"></script>
         <script src="lib/angular-bootstrap-datetimepicker/js/datetimepicker.js"></script>
         <script src="lib/javascript-detect-element-resize/js/jquery.resize.js"></script>
+        <script src="lib/angular-linkify/js/angular-linkify.min.js"></script>
 
         <!-- Include third party libs -->
         <script src="lib/d3/js/d3.min.js"></script>
