NEON-1834 NEON-1835 Created the annotation service and the annotations directive.  Added annotations capability to the newsfeed.  Currently annotations only support sentiment.

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" type="text/css" href="lib/angular-gantt/css/angular-gantt-plugins.min.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-ui-tree/css/angular-ui-tree.min.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-bootstrap-datetimepicker/css/datetimepicker.css">
+        <link rel="stylesheet" type="text/css" href="lib/icomoon/style.css">
 
         <link rel="stylesheet" type="text/css" href="css/app.css">
 
@@ -210,6 +211,7 @@
 
         <!-- Include our custom Angular components here for now. -->
         <script src="js/app.js"></script>
+        <script src="js/annotationService.js"></script>
         <script src="js/connectionService.js"></script>
         <script src="js/datasetService.js"></script>
         <script src="js/errorNotificationService.js"></script>
@@ -224,6 +226,7 @@
         <script src="js/charts/circularHeatChart.js"></script>
 
         <script src="js/directives/addVisualization.js"></script>
+        <script src="js/directives/annotations.js"></script>
         <script src="js/directives/barchart.js"></script>
         <script src="js/directives/circularHeatChart.js"></script>
         <script src="js/directives/circularHeatForm.js"></script>
