--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" type="text/css" href="lib/angular-gantt/css/angular-gantt-plugins.min.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-ui-tree/css/angular-ui-tree.min.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-bootstrap-datetimepicker/css/datetimepicker.css">
-        <link rel="stylesheet" type="text/css" href="lib/icomoon/style.css">
+        <link rel="stylesheet" type="text/css" href="lib/fontawesome/css/font-awesome.min.css">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
