Fixed a couple of minor issues with the angular-gantt and jquery-ui dependencies.

--- a/app/index.html
+++ b/app/index.html
@@ -14,15 +14,15 @@
         <!-- build:css css/neon-dashboard.min.css -->
         <!-- bower:css -->
         <link rel="stylesheet" href="lib/angular-bootstrap-datetimepicker/src/css/datetimepicker.css" />
-        <link rel="stylesheet" href="lib/angular-gantt/assets/angular-gantt.css" />
-        <link rel="stylesheet" href="lib/angular-gantt/assets/angular-gantt-plugins.css" />
         <link rel="stylesheet" href="lib/angular-gridster/dist/angular-gridster.min.css" />
         <link rel="stylesheet" href="lib/angular-ui-tree/dist/angular-ui-tree.min.css" />
         <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
         <!-- endbower -->
 
+        <link rel="stylesheet" href="lib/angular-gantt/assets/angular-gantt.css" />
+        <link rel="stylesheet" href="lib/angular-gantt/assets/angular-gantt-plugins.css" />
         <link rel="stylesheet" href="lib/jquery-ui/themes/ui-lightness/jquery-ui.css" />
-        <link rel="stylesheet" href="lib/jquery-ui/themes/ui-lightness/jquery-ui.theme.css" />
+        <link rel="stylesheet" href="lib/jquery-ui/themes/ui-lightness/jquery.ui.theme.css" />
         <link rel="stylesheet" href="js/vendor/slick-grid/css/slick.grid.css" />
 
         <link rel="stylesheet" type="text/css" href="css/app.css">
@@ -163,8 +163,6 @@
         <script src="lib/moment/moment.js"></script>
         <script src="lib/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
         <script src="lib/angular-moment/angular-moment.js"></script>
-        <script src="lib/angular-gantt/assets/angular-gantt.js"></script>
-        <script src="lib/angular-gantt/assets/angular-gantt-plugins.js"></script>
         <script src="lib/javascript-detect-element-resize/detect-element-resize.js"></script>
         <script src="lib/angular-gridster/src/angular-gridster.js"></script>
         <script src="lib/angular-loader/angular-loader.js"></script>
@@ -183,6 +181,9 @@
         <script src="lib/remarkable-bootstrap-notify/bootstrap-notify.js"></script>
         <script src="lib/respond/dest/respond.src.js"></script>
         <!-- endbower -->
+
+        <script src="lib/angular-gantt/dist/angular-gantt.js"></script>
+        <script src="lib/angular-gantt/dist/angular-gantt-plugins.js"></script>
 
         <script src="lib/user-ale/helper-libs/javascript/userale.js"></script>
         <script src="lib/user-ale/helper-libs/javascript/userale-worker.js"></script>
