NEON-1828 Changed the name of the concatenated, minified javascript package for the application files to fix a strange bug that occured on some systems.

--- a/app/index.html
+++ b/app/index.html
@@ -206,7 +206,7 @@
         <script src="lib/rainbowvis.js/rainbowvis.js"></script>
         <!-- endbuild -->
 
-        <!-- build:js(app) js/neon-dashboard.min.js -->
+        <!-- build:js(app) js/neon-dashboard-app.min.js -->
         <!-- injector:js -->
         <script src="js/namespaces.js"></script>
         <script src="js/neon-extensions/filtertable.js"></script>
