NEON-1828 Fixed errors in the choice of javascript files included in the index.html by the grunt-wiredep task.  Issues with visualization resizing behavior should now be fixed.

--- a/app/index.html
+++ b/app/index.html
@@ -163,23 +163,19 @@
         <script src="lib/moment/moment.js"></script>
         <script src="lib/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
         <script src="lib/angular-moment/angular-moment.js"></script>
-        <script src="lib/javascript-detect-element-resize/detect-element-resize.js"></script>
         <script src="lib/angular-gridster/src/angular-gridster.js"></script>
         <script src="lib/angular-loader/angular-loader.js"></script>
         <script src="lib/angular-mocks/angular-mocks.js"></script>
         <script src="lib/angular-route/angular-route.js"></script>
         <script src="lib/angular-ui-tree/dist/angular-ui-tree.js"></script>
-        <script src="lib/angular-ui-tree/dist/angular-ui-tree.min.js"></script>
         <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="lib/d3/d3.js"></script>
-        <script src="lib/html5shiv/dist/html5shiv.js"></script>
         <script src="lib/jquery-ui/ui/jquery-ui.js"></script>
         <script src="lib/jquery.tagcloud/jquery.tagcloud.js"></script>
         <script src="lib/js-yaml/dist/js-yaml.js"></script>
         <script src="lib/mustache/mustache.js"></script>
         <script src="lib/ngDraggable/ngDraggable.js"></script>
         <script src="lib/remarkable-bootstrap-notify/bootstrap-notify.js"></script>
-        <script src="lib/respond/dest/respond.src.js"></script>
         <!-- endbower -->
 
         <script src="lib/angular-gantt/dist/angular-gantt.js"></script>
@@ -192,6 +188,7 @@
         <script src="lib/opencpu/opencpu-0.5.js"></script>
 
         <!-- Include third party libs -->
+        <script src="lib/javascript-detect-element-resize/jquery.resize.js"></script>
         <script src="lib/heatmapjs/build/heatmap.js"></script>
         <script src="js/vendor/openlayers-heatmapjs/heatmap-openlayers.js"></script>
         <script src="lib/threedubmedia.jquery.event/event.drag/jquery.event.drag.js"></script>
